[gd_scene load_steps=2 format=3 uid="uid://dlhw5wggxabc"]

[ext_resource type="Script" path="res://ui/InventoryPanel.gd" id="1_wwnao"]

[node name="InventoryPanel" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 395.0
offset_top = 107.0
offset_right = 594.0
offset_bottom = 351.0
script = ExtResource("1_wwnao")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 77.0
offset_top = 4.0
offset_right = 117.0
offset_bottom = 32.0
theme_override_font_sizes/font_size = 20
text = "背包"
horizontal_alignment = 1

[node name="WeaponsSection" type="VBoxContainer" parent="."]
layout_mode = 0
offset_top = 38.0
offset_right = 150.0
offset_bottom = 118.0

[node name="WeaponsTitle" type="Label" parent="WeaponsSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "武器"

[node name="WeaponsList" type="VBoxContainer" parent="WeaponsSection"]
layout_mode = 2

[node name="KeysSection" type="VBoxContainer" parent="."]
layout_mode = 0
offset_top = 170.0
offset_right = 150.0
offset_bottom = 250.0

[node name="KeysTitle" type="Label" parent="KeysSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "钥匙"

[node name="KeysList" type="VBoxContainer" parent="KeysSection"]
layout_mode = 2
